--- a/deploymentservice.yml
+++ b/deploymentservice.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: ekart
-          image: adijaiswal/ekart:latest # Image that will be used to containers in the cluster
+          image: yuvrajdocker001/ekart:latestone # Image that will be used to containers in the cluster
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8070 # The port that the container is running on in the cluster
@@ -25,7 +25,7 @@ spec:
 apiVersion: v1 # Kubernetes API version
 kind: Service # Kubernetes resource kind we are creating
 metadata: # Metadata of the resource kind we are creating
-  name: ekart-ssvc
+  name: ekart-svc
 spec:
   selector:
     app: ekart
